--- a/app/src/main/res/layout/activity_vista_clinica.xml
+++ b/app/src/main/res/layout/activity_vista_clinica.xml
@@ -59,7 +59,7 @@
         app:layout_constraintVertical_bias="0.543" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/Empleados"
         android:layout_width="132dp"
         android:layout_height="48dp"
         android:backgroundTint="#207178"
