--- a/app/src/main/res/layout/activity_editar_agenda.xml
+++ b/app/src/main/res/layout/activity_editar_agenda.xml
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.181">
 
         <ImageView
-            android:id="@+id/EditarProducto_foto"
+            android:id="@+id/EditarAgenda_fotos"
             android:layout_width="500dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -37,7 +37,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/EditarProducto_SubirFoto"
+                android:id="@+id/EditarAgenda_SubirFoto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
@@ -52,7 +52,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/EditarProducto_TomarFoto"
+                android:id="@+id/EditarAgenda_TomarFoto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -85,7 +85,7 @@
             android:layout_height="match_parent"
             android:fontFamily="@font/poppins_semibold"
             android:gravity="center"
-            android:text="Productos"
+            android:text="Masajes"
             android:textColor="#000000"
             android:textSize="20sp" />
 
@@ -111,7 +111,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/EditarProducto_name_antes"
+                android:id="@+id/EditarEmpleado_name_antes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -142,7 +142,7 @@
                 app:layout_constraintVertical_bias="0.564" />
 
             <TextView
-                android:id="@+id/EditarProducto_price_antes"
+                android:id="@+id/EditarEmpleado_Dui_antes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -173,7 +173,7 @@
                 app:layout_constraintVertical_bias="0.719" />
 
             <TextView
-                android:id="@+id/EditarProducto_cat_antes"
+                android:id="@+id/EditarEmpleado_depa_antes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
