--- a/app/src/main/res/layout/activity_mostrar_informacion.xml
+++ b/app/src/main/res/layout/activity_mostrar_informacion.xml
@@ -22,11 +22,11 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#ACCFE2"
+            android:background="#207178"
             android:fontFamily="@font/poppins_semibold"
             android:gravity="center"
             android:text="Masajes"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:textSize="20sp" />
 
         <LinearLayout
@@ -54,7 +54,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/ProductosInfo_Foto"
+                android:id="@+id/EmpleadoInfo_Foto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
