--- a/app/src/main/res/layout/activity_informacion_empleados.xml
+++ b/app/src/main/res/layout/activity_informacion_empleados.xml
@@ -76,7 +76,7 @@
                 android:layout_marginBottom="30dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:text="TextView"
-                android:textColor="#FFFFFF"
+                android:textColor="#000000"
                 android:textSize="20sp" />
 
             <TextView
@@ -96,7 +96,7 @@
                 android:layout_marginBottom="30dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:text="TextView"
-                android:textColor="#FFFFFF"
+                android:textColor="#000000"
                 android:textSize="20sp" />
 
             <TextView
@@ -116,7 +116,7 @@
                 android:layout_marginBottom="30dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:text="TextView"
-                android:textColor="#FFFFFF"
+                android:textColor="#000000"
                 android:textSize="20sp" />
 
             <Button
