--- a/app/src/main/res/layout/card_empleados.xml
+++ b/app/src/main/res/layout/card_empleados.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="140dp"
@@ -25,7 +22,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_semibold"
                 android:paddingBottom="15dp"
-                android:text="Empleados"
+                android:text="Empleado"
                 android:textColor="#FFFFFF"
                 android:textSize="16sp" />
 
@@ -37,7 +34,7 @@
                 <TextView
                     android:id="@+id/cardEmpleados_Departamento"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:fontFamily="@font/poppins_semibold"
                     android:text="Departamento"
@@ -65,7 +62,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/cardEmpleados_btnEliminar"
+                android:id="@+id/cardEmpleado_btnEliminar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -78,7 +75,7 @@
                 android:textColor="#FFFFFF" />
 
             <TextView
-                android:id="@+id/cardEditar_btnEditar"
+                android:id="@+id/cardEmpleado_btnEditar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
