--- a/app/src/main/res/layout/activity_editar_e.xml
+++ b/app/src/main/res/layout/activity_editar_e.xml
@@ -4,75 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ACCFE2"
     tools:context=".EditarE">
 
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="252dp"
-        android:layout_marginHorizontal="20dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/linearLayout"
+        android:layout_width="323dp"
+        android:layout_height="148dp"
+        android:layout_marginTop="72dp"
+        android:background="#ACCFE2"
+        android:gravity="bottom"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.181">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/EditarEmpleados_foto"
-            android:layout_width="500dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/imagen" />
-
-        <LinearLayout
+            android:id="@+id/imageView20"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/logo" />
 
-            <TextView
-                android:id="@+id/EditarEmpleados_SubirFoto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/rounded_corners"
-                android:backgroundTint="#27253A"
-                android:fontFamily="@font/poppins_semibold"
-                android:gravity="center"
-                android:text="Subir\nfoto"
-                android:textAlignment="center"
-                android:textColor="#FFFFFF"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/EditarEmpleados_TomarFoto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_weight="1"
-                android:background="@drawable/rounded_corners"
-                android:backgroundTint="#27253A"
-                android:fontFamily="@font/poppins_semibold"
-                android:gravity="center"
-                android:text="Tomar\nfoto"
-                android:textAlignment="center"
-                android:textColor="#FFFFFF"
-                android:textSize="16sp" />
-        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="74dp"
-        android:background="#207178"
+        android:background="#ACCFE2"
         android:gravity="bottom"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,23 +46,27 @@
             android:fontFamily="@font/poppins_semibold"
             android:gravity="center"
             android:text="Empleados"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:textSize="20sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="3dp"
-            android:background="#207178"
+            android:background="#ACCFE2"
             android:orientation="vertical"></LinearLayout>
 
     </LinearLayout>
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="409dp"
         android:layout_height="390dp"
-        android:layout_marginTop="1dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        tools:layout_editor_absoluteX="1dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.529"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.917">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -117,7 +81,7 @@
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:text="TextView"
-                android:textColor="#787B8F"
+                android:textColor="#000000"
                 android:textSize="20sp" />
 
             <EditText
@@ -149,7 +113,7 @@
                 android:fontFamily="@font/poppins_semibold"
                 android:text="TextView"
                 android:textAlignment="textStart"
-                android:textColor="#787B8F"
+                android:textColor="#000000"
                 android:textSize="20sp" />
 
             <EditText
@@ -180,7 +144,7 @@
                 android:fontFamily="@font/poppins_semibold"
                 android:text="TextView"
                 android:textAlignment="textStart"
-                android:textColor="#787B8F"
+                android:textColor="#000000"
                 android:textSize="20sp" />
 
             <Spinner
@@ -214,6 +178,18 @@
                     android:textColor="#FFFFFF"
                     android:textSize="16sp" />
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/poppins_semibold"
+                android:gravity="center"
+                android:text="Empleados"
+                android:textColor="#000000"
+                android:textSize="20sp" />
         </LinearLayout>
     </ScrollView>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
