--- a/app/src/main/res/layout/activity_vista_clinica.xml
+++ b/app/src/main/res/layout/activity_vista_clinica.xml
@@ -46,7 +46,7 @@
         app:layout_constraintVertical_bias="0.399" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnFactura"
         android:layout_width="119dp"
         android:layout_height="47dp"
         android:backgroundTint="#207178"
