--- a/app/src/main/res/layout/activity_vista_tienda.xml
+++ b/app/src/main/res/layout/activity_vista_tienda.xml
@@ -47,7 +47,7 @@
         app:layout_constraintVertical_bias="0.363" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnFactura"
         android:layout_width="119dp"
         android:layout_height="47dp"
         android:backgroundTint="#207178"
