--- a/app/src/main/res/layout/activity_reportes.xml
+++ b/app/src/main/res/layout/activity_reportes.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ACCFE2"
-    tools:context=".Factura">
+    tools:context=".Reportes">
 
     <ImageView
-        android:id="@+id/imageView19"
+        android:id="@+id/imageView21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
