--- a/app/src/main/res/layout/activity_vista_clinica.xml
+++ b/app/src/main/res/layout/activity_vista_clinica.xml
@@ -72,7 +72,7 @@
         app:layout_constraintVertical_bias="0.68" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/reportes"
         android:layout_width="132dp"
         android:layout_height="48dp"
         android:backgroundTint="#207178"
@@ -85,7 +85,7 @@
         app:layout_constraintVertical_bias="0.809" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/clientes"
         android:layout_width="132dp"
         android:layout_height="48dp"
         android:backgroundTint="#207178"
