--- a/app/src/main/res/layout/activity_vista_tienda.xml
+++ b/app/src/main/res/layout/activity_vista_tienda.xml
@@ -73,7 +73,7 @@
         app:layout_constraintVertical_bias="0.595" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/reportes"
         android:layout_width="132dp"
         android:layout_height="48dp"
         android:backgroundTint="#207178"
@@ -86,7 +86,7 @@
         app:layout_constraintVertical_bias="0.724" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/clientes"
         android:layout_width="132dp"
         android:layout_height="48dp"
         android:backgroundTint="#207178"
