--- a/app/src/main/res/layout/activity_agendar.xml
+++ b/app/src/main/res/layout/activity_agendar.xml
@@ -173,6 +173,20 @@
         app:layout_constraintTop_toTopOf="@+id/linearLayout"
         app:layout_constraintVertical_bias="0.959">
 
+
+        <Button
+            android:id="@+id/AgregarAgendar_Ver"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:backgroundTint="#207178"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="Ver"
+            android:textAllCaps="false"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp" />
+
         <Button
             android:id="@+id/AgendarMasaje"
             android:layout_width="wrap_content"
