--- a/app/src/main/res/layout/activity_empleados.xml
+++ b/app/src/main/res/layout/activity_empleados.xml
@@ -151,6 +151,19 @@
             app:layout_constraintVertical_bias="0.959">
 
             <Button
+                android:id="@+id/AgregarEmpleados_Ver"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:backgroundTint="#207178"
+                android:fontFamily="@font/poppins_semibold"
+                android:text="Ver"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp" />
+
+            <Button
                 android:id="@+id/AgregarEmpleados_agregar"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
